namespace WeaponConstantsNS.ShootingWeaponConstantsNS
{
	public static class RevolverConstants
	{
		public const string RELOADING_DELAY = "RelodingDelay";
		public const string RELOADING_ANIMATION_SPEED = "ReloadingSpeed";
		public const string RELOADING_ENDING = "ReloadingEnding";
		public const string REVOLVER_RELOADING_SOUND = "RevolverReloading";
		public const string REVOLVER_RELOADING_CYLINDER_SOUND = "RevolverCylinder";
	}
}